--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,24 @@
-html {
+@import './assets/scss/main.scss';
+
+.main-container {
     height: 100%;
-    width: 100%;
-    body {
-        height: 100%;
-        width: 100%;
+    width: 95%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: auto minmax(90px, 120px);
+    box-sizing: border-box;
+    box-shadow: 1px 1px 3px rgba(10,10,10,0.6);
+    background-color: #F0F4F5;
+    .app {
+        grid-row: 1;
+        min-height: 340px;
+        border-bottom: 1px solid rgba(10,10,10,0.2);
+        background-image: url('https://www.webdesignerdepot.com/cdn-origin/uploads/2017/05/featured_404.jpg');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
+    .app-desc {
+        grid-row: 2;
+    }   
 }
