--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,3 @@
-
 html {
     min-height: auto;
     min-width: auto;
@@ -10,8 +9,9 @@ html {
 }
 
 
-
 @import "normalize.scss";
 @import "commons.scss";
 @import "fonts.scss";
-@import "./github-404/github-404.scss";
+
+// demo-project scss
+@import "../../demos/github-404/scss/github-404.scss";
