--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,3 +15,4 @@ html {
 
 // demo-project scss
 @import "../../demos/github-404/scss/github-404.scss";
+@import "../../demos/Clock/scss/clock.scss";
