--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,3 +16,4 @@ html {
 // demo-project scss
 @import "../../demos/github-404/scss/github-404.scss";
 @import "../../demos/Clock/scss/clock.scss";
+@import "../../demos/context_api/scss/context_api.scss";
