--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,10 +1,13 @@
 html {
-    min-height: auto;
-    min-width: auto;
+    height: 100%;
+    width: 100%;
     body {
-        min-width: 100%;
-        min-height: 100vh;
+        width: 100%;
+        height: 100%;
         background-color: rgba(240,240,240,0.9);
+        #root {
+            height: 100%;
+        }
     }
 }
 
