added basic redux

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,3 +20,4 @@ html {
 @import "../../demos/github-404/scss/github-404.scss";
 @import "../../demos/Clock/scss/clock.scss";
 @import "../../demos/context_api/scss/context_api.scss";
+@import "../../demos/Redux-sample/scss/example.scss";
